--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
                 Let's Help Those Who Are <br> More In Need
             </h1>
             <p class="top-text2">
-                With one-quarter of our global team dedicated to trust and safety, <br> we've successfully managed fundraisers worldwide for more than a decade. <br> Don't worry about a thing, we've got you covered
+                With one-quarter of our global team dedicated to trust and safety, <br> we've successfully managed fundraisers worldwide for more than a decade. <br> Don't worry about a thing, we've got you covered.
             </p>
             <a class="top-btn" target="_blank" href="https://www.gofundme.com/">Donate Today</a>
         </div>
     </section>
     <!-- Top section finished -->
+
+    <div class="mid-text">
+        <h1 class="mid-heading">Donate Today</h1>
+        <p class="mid-text2">With one-quarter of our global team dedicated to trust and safety, <br> we've successfully managed fundraisers worldwide for more than a decade. Don't worry about a thing, <br> we've got you covered.</p>
+    </div>
 </body>
 </html>
