donate-plan-finished

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Top section start from here -->
+    <!-- Top section -->
     <section class="top-section">
         <div class="top-section-text">
             <h1 class="top-text1">
@@ -23,9 +23,29 @@
     </section>
     <!-- Top section finished -->
 
+    <!-- Mid Text -->
     <div class="mid-text">
         <h1 class="mid-heading">Donate Today</h1>
-        <p class="mid-text2">With one-quarter of our global team dedicated to trust and safety, <br> we've successfully managed fundraisers worldwide for more than a decade. Don't worry about a thing, <br> we've got you covered.</p>
+        <p class="mid-text2">With one-quarter of our global team dedicated to trust and safety, <br> we've successfully managed fundraisers worldwide for more than a decade. <br> Don't worry about a thing, we've got you covered.</p>
     </div>
+    <!-- Mid Text finished -->
+
+    <!-- Donate Plan -->
+    <section class="donate-plan">
+        <div class="donate-amount">
+                <p>100৳</p>
+                <p id="select-donate">200৳</p>
+                <p>500৳</p>
+                <p>1000৳</p>
+                <p>5000৳</p>
+        </div>
+        <div class="donate-plan-choice">
+            <p>Other Amount (Taka)</p>
+            <hr>
+            <a class="top-btn donate-btn" target="_blank" href="https://www.gofundme.com/">Donate Today</a>
+        </div>
+    </section>
+    <!-- Donate Plan finished -->
+    
 </body>
 </html>
