donate-plan-card-finished

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p class="top-text2">
                 With one-quarter of our global team dedicated to trust and safety, <br> we've successfully managed fundraisers worldwide for more than a decade. <br> Don't worry about a thing, we've got you covered.
             </p>
-            <a class="top-btn" target="_blank" href="https://www.gofundme.com/">Donate Today</a>
+            <a class="top-btn" target="_blank" href="https://www.gofundme.com/">Donate Now</a>
         </div>
     </section>
     <!-- Top section finished -->
@@ -30,7 +30,7 @@
     </div>
     <!-- Mid Text finished -->
 
-    <!-- Donate Plan -->
+    <!-- Donate Amount -->
     <section class="donate-plan">
         <div class="donate-amount">
                 <p>100৳</p>
@@ -42,10 +42,62 @@
         <div class="donate-plan-choice">
             <p>Other Amount (Taka)</p>
             <hr>
-            <a class="top-btn donate-btn" target="_blank" href="https://www.gofundme.com/">Donate Today</a>
+            <a class="top-btn donate-btn" target="_blank" href="https://www.gofundme.com/">Donate Now</a>
+        </div>
+    </section>
+    <!-- Donate Amount finished -->
+
+    <!-- Donate Plan -->
+    <section>
+        <div class="our-plan">
+            <h1 class="">Our Donate Plan</h1>
+            <p class="mid-text2">We're here to help charities change the world,  so our global fundraising service is free. <br> We cover our costs by taking a 5% donation fee which donors can cover - and over 90% do!</p>
+        </div>
+
+        <!-- donate plan card -->
+        <div class="donate-plan-card">
+            <div class="card1">
+                <div class="img1">
+                    <img src="./icons/food.png" alt="Food">
+                </div>
+                <div class="card1-text">
+                    <h1>
+                        Food for a Family
+                    </h1>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                    </p>
+                </div>
+            </div>
+            <div class="card2">
+                <div class="img2">
+                    <img src="./icons/shelter.png" alt="">
+                </div>
+                <div class="card2-text">
+                    <h1>
+                        Shelter for a Family
+                    </h1>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.  
+                    </p>
+                </div>
+            </div>
+            <div class="card3">
+                <div class="img3">
+                    <img src="./icons/Frame-1.png" alt="Education">
+                </div>
+                <div class="card3-text">
+                    <h1>
+                        Education for a Child
+                    </h1>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.  
+                    </p>  
+                </div>
+            </div>
         </div>
     </section>
     <!-- Donate Plan finished -->
-    
+
 </body>
 </html>
