--- a/index.html
+++ b/index.html
@@ -100,4 +100,8 @@
     <!-- Donate Plan finished -->
 
 </body>
+<footer>
+    <h1>Donate Me</h1>
+    <p> USA, United States | support@donateme.com | EIN: 86-3651477</p>
+</footer>
 </html>
