--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <!-- website title -->
     <title>Donate Me</title>
+
+    <!-- website favicon -->
     <link rel="shortcut icon" href="./icons/eco-friendly.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <div class="menu-container">
+            <div class="logo">
+                <h1 class="logo-title">Donate Me</h1>
+            </div>
+            <div class="menuItems">
+                <li><a href="#">Home</a></li>
+                <li><a href="#donateToday">Donate Now!</a></li>
+                <li><a href="#ourPlan">Our Plan</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </div>
+        </div>
+    </nav>
     <!-- Top section -->
     <section class="top-section">
         <div class="top-section-text">
@@ -25,13 +47,13 @@
 
     <!-- Mid Text -->
     <div class="mid-text">
-        <h1 class="mid-heading">Donate Today</h1>
+        <h1 class="mid-heading"  id="donateToday">Donate Today</h1>
         <p class="mid-text2">With one-quarter of our global team dedicated to trust and safety, <br> we've successfully managed fundraisers worldwide for more than a decade. <br> Don't worry about a thing, we've got you covered.</p>
     </div>
     <!-- Mid Text finished -->
 
     <!-- Donate Amount -->
-    <section class="donate-plan">
+    <section class="donate-plan"  id="donateToday">
         <div class="donate-amount">
                 <p>100৳</p>
                 <p id="select-donate">200৳</p>
@@ -50,7 +72,7 @@
     <!-- Donate Plan -->
     <section>
         <div class="our-plan">
-            <h1 class="">Our Donate Plan</h1>
+            <h1 id="ourPlan">Donation Plan</h1>
             <p class="mid-text2">We're here to help charities change the world,  so our global fundraising service is free. <br> We cover our costs by taking a 5% donation fee which donors can cover - and over 90% do!</p>
         </div>
 
@@ -65,7 +87,7 @@
                         Food for a Family
                     </h1>
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.
+                        Our faith inspires us to be an organization built on compassion, and motivated by love. 
                     </p>
                 </div>
             </div>
@@ -78,7 +100,7 @@
                         Shelter for a Family
                     </h1>
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.  
+                        Our mission is to bring relief to the poorest of the poor in the countries where we serve.  
                     </p>
                 </div>
             </div>
@@ -91,7 +113,7 @@
                         Education for a Child
                     </h1>
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.  
+                        We ensure the Education of the peoples. We helped them with books, pens & other stationaries.
                     </p>  
                 </div>
             </div>
@@ -99,7 +121,21 @@
     </section>
     <!-- Donate Plan finished -->
 
+    <!-- Contact  -->
+    <div class="our-plan">
+        <h1 id="contact">Contact With Us</h1>
+        <p class="mid-text2">Ready to get started? Join thousands of others today.</p>
+    </div>
+    <div class="newsletter">
+        <div class="form">
+            <input class="email" type="text" placeholder="Email">
+            <a class="top-btn" href="">Subscribe</a>
+        </div>
+    </div>
+
 </body>
+
+<!-- footer -->
 <footer>
     <h1>Donate Me</h1>
     <p> USA, United States | support@donateme.com | EIN: 86-3651477</p>
